Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.02*

****	Add specify operators => *> +=> +*> -=> -*>.  [Mark Nodine]

* Verilog::Language 3.013 2007/10/18

****	Fix parsing module #(parameter x,y) declarations. [Oleg Rodionov]

****	Fix parsing system functions with empty parens. [Oleg Rodionov]

****	Fix Verilog::Netlist errors having wrong line number. [Oleg Rodionov]

* Verilog::Language 3.012 2007/09/10

**	Added Verilog::EditFiles module and vsplitmodule example.

* Verilog::Language 3.011 2007/07/31

***	Added event trigger -> operator. [Mark Nodine]

****	Remove preprocessor adding newlines before `line. [Mark Nodine]

* Verilog::Language 3.010 2007/07/18

***	Added Parser::endparse callback. [Mark Nodine]

***	Added SigParser::endmodule, endtaskfunc, and endcell callbacks.

****	Fix attachment of comments to proceeding cells. [David Chinnery]

* Verilog::Language 3.002 2007/07/16

***	Find functions now search backslash escaped names.  [David Chinnery]

***	Fix vrename breakage in 3.00* releases.  [David Price]

****	Fix SigParser::comment to call Parser::Comment. [Mark Nodine]

****	Fix Parser::unreadback to always return value. [Mark Nodine]

****	Fix g++ bug giving "out of memory" on Cygwin.  [Pongstorn]

* Verilog::Language 3.001 2007/06/20

****	Support V2K function/task argument lists.

****	Fix Preprocessor dropping some `line directives.  [Mark Nodine]

****	Fix Netlist "not found" errors on primitives, bug27624. [Jeff Trull]

* Verilog::Language 3.000 2007/06/12

** 	Note this is a MAJOR release that may have incompatibilities with
	earlier versions, although I've attempted to minimize problems.
	Please email any problems to the author.

**	Verilog::SigParser has been completely rewritten.  The good news is
	it understands almost the entire Verilog 2005 language.  The bad