@@ -243,3 +243,6 @@ verilog/pinorder.v:041: SIGNAL_DECL  'input' 'abcconst' '[2:0]' '' '' ''
 verilog/pinorder.v:042: SIGNAL_DECL  'input' 'noconnect' '[3:0]' '' 'signed' ''
 verilog/pinorder.v:043: SIGNAL_DECL  'input' 'def' '[31:0]' '' '' ''
 verilog/pinorder.v:035: ENDMODULE  'endmodule'
+verilog/parser_sv.v:002: MODULE  'module' 'times' undef '0'
+verilog/parser_sv.v:003: SIGNAL_DECL  'time' 'x' '' '' '' ''
+verilog/parser_sv.v:002: ENDMODULE  'endmodule'
